	* doc/descriptions/mustek_usb2.desc: Moved from
	  descriptions-external. Updated.
	* PROJECTS: Removed link to BeOS (link goes to nowhere, SANE
	  website has links to projects). Removed link to wi32 port
  	  (included in SANE). Removed link to SaneTwain (listed on SANE
	  website).
	* doc/doxygen-sanei.conf.in: Updated to current doxygen
	  version. Output more C-friendly format.

2005-10-02  Gerhard Jaeger <gerhard@gjaeger.de>

	* doc/plustek/Plustek-USB.changes: Update.
	* backend/plustek.c: Bumped build number.
	* backend/plustek-usbdevs.c backend/plustek-usb.h: Updated motor
	  settings for Canoscan LiDE25, thanks to Stephan February 
	  <stephanf@singnet.com.sg> for providing these values.

2005-10-02  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/as6e.desc: Added Trust Easy Scan 9600 Plus (bug
	  #301000).
	* backend/sharp.c: Fixed some compilation warnings (bug #300404).
	* AUTHORS: Fixed Rene Rebe's email address.
	* doc/descriptions/unsupported.desc: Removed Epson Perfection 4180
	  (supported by epkowa backend).
	
2005-10-01  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions-external/mustek_a3p1.desc
	  doc/descriptions/unsupported.desc: Added external mustek_a3p1
	  backend that supports Mustek P 3600 A3 Pro.
	* tools/Makefile.in: Added udev to list of directories that are
	  part of the distribution.
	* doc/descriptions.txt: Yet another "itsself".
	* backend/sp15c.c: Fixed some warnings (bug #302290).

2005-10-01  Julien Blache <jb@jblache.org>
	* doc/sane-find-scanner.man: Typo fix, s/itsself/itself/ from
	Alfie Costa.

2005-09-29  Eddy De Greef <eddy_de_greef at tiscali dot be>

	* backend/mustek_pp_cis.c: Minor bug fix: wrong model name was 
	  reported for 1200CP+ driver.

2005-09-29  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/gt68xx.c backend/gt68xx.conf backend/gt68xx_devices.c
	  backend/gt68xx_generic.c backend/gt68xx_generic.h